--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.1",
-    "@mui/material": "^5.6.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-horizontal-scrolling-menu": "^2.7.1",
-    "react-loader-spinner": "^6.0.0-0",
-    "react-router-dom": "^6.3.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/material": "^6.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-horizontal-scrolling-menu": "^7.1.7",
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -39,11 +39,11 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.13.0",
+    "eslint": "^9.10.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0"
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.35.2",
+    "eslint-plugin-react-hooks": "^4.6.2"
   }
 }
